feat: fix merge, add condition for pod state (#28)
